--- a/app/scss/globals/_variables.scss
+++ b/app/scss/globals/_variables.scss
@@ -1,6 +1,10 @@
 :root {
+  // colours
   --clr-1: hsl(0, 0%, 100%);
   --clr-2: hsl(212, 45%, 89%);
   --clr-3: hsl(220, 15%, 55%);
   --clr-4: hsl(218, 44%, 22%);
+
+  // fonts
+  --font-primary: "Outfit", sans-serif;
 }
