rename colour variables

--- a/app/scss/globals/_variables.scss
+++ b/app/scss/globals/_variables.scss
@@ -1,9 +1,9 @@
 :root {
   // colours
-  --clr-1: hsl(0, 0%, 100%);
-  --clr-2: hsl(212, 45%, 89%);
-  --clr-3: hsl(220, 15%, 55%);
-  --clr-4: hsl(218, 44%, 22%);
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-lightgray: hsl(212, 45%, 89%);
+  --clr-grayishblue: hsl(220, 15%, 55%);
+  --clr-darkblue: hsl(218, 44%, 22%);
 
   // fonts
   --font-primary: "Outfit", sans-serif;
